test_suite5/ALAN/test_suite/alan-2022-examples/passing/000331_pair.alan
source K begin while(5) do relax end end
