test_suite5/ALAN/test_suite/alan-2022-examples/failing/009270_mutation.alan
source S w function Q6() begin relax end begin relax end
